--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "domify": "^2.0.0",
+    "dompurify": "^3.2.3",
+    "firebase": "^11.0.2",
+    "html-react-parser": "^5.2.0",
     "lucide-react": "^0.468.0",
+    "marked": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "recharts": "^2.14.1",
