--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "apexcharts": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "domify": "^2.0.0",
     "dompurify": "^3.2.3",
     "firebase": "^11.0.2",
@@ -23,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "reactflow": "^11.11.4",
     "recharts": "^2.14.1",
     "style-to-object": "^1.0.8",
     "tailwind-merge": "^2.5.5",
